--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     color: #fff;
     font-family: 'Fleur De Leah';
+    user-select: none;
 }
 
 body {
@@ -156,32 +157,33 @@ main {
     background: url(halloween.gif);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 70%;
-    height: 60vh;
+    width: 400px;
+    height: 400px;
+    border: 1px solid yellow;
 }
 
 .make_up {
     background: url(makeup.gif);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 70%;
-    height: 60vh;
+    width: 400px;
+    height: 400px;
 }
 
 .trickortreat {
     background: url(tricktreat.gif);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 70%;
-    height: 60vh;
+    width: 400px;
+    height: 400px;
 }
 
 .game {
     background: url(games.gif);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 70%;
-    height: 60vh;
+    width: 400px;
+    height: 400px;
 }
 
 .text h1 {
@@ -310,20 +312,19 @@ main {
         margin-bottom: 3rem;
     }
     .home {
-        width: 70%;
-        height: 50vh;
+        width: 230px;
+        height: 230px;
     }
     .make_up {
-        width: 70%;
-        height: 50vh;
+        width: 230px;
+        height: 230px;
     }
     .trickortreat {
-        width: 70%;
-        height: 50vh;
+        width: 230px;
+        height: 230px;
     }
     .game {
-        width: 70%;
-        height: 50vh;
+        width: 230px height: 230px;
     }
     .text h1 {
         font-size: 1.5rem;
@@ -418,20 +419,20 @@ main {
         margin-bottom: 4rem;
     }
     .home {
-        width: 70%;
-        height: 40vh;
+        width: 250px;
+        height: 250px;
     }
     .make_up {
-        width: 70%;
-        height: 40vh;
+        width: 250px;
+        height: 250px;
     }
     .trickortreat {
-        width: 70%;
-        height: 40vh;
+        width: 250px;
+        height: 250px;
     }
     .game {
-        width: 70%;
-        height: 40vh;
+        width: 250px;
+        height: 250px;
     }
     .text h1 {
         font-size: 1.9rem;
@@ -523,20 +524,20 @@ main {
         margin-bottom: 4rem;
     }
     .home {
-        width: 70%;
-        height: 35vh;
+        width: 300px;
+        height: 300px;
     }
     .make_up {
-        width: 70%;
-        height: 35vh;
+        width: 300px;
+        height: 300px;
     }
     .trickortreat {
-        width: 70%;
-        height: 35vh;
+        width: 300px;
+        height: 300px;
     }
     .game {
-        width: 70%;
-        height: 35vh;
+        width: 300px;
+        height: 300px;
     }
     .text h1 {
         font-size: 2.3rem;
@@ -628,20 +629,20 @@ main {
         margin-bottom: 4rem;
     }
     .home {
-        width: 70%;
-        height: 46vh;
+        width: 320px;
+        height: 320px;
     }
     .make_up {
-        width: 70%;
-        height: 46vh;
+        width: 320px;
+        height: 320px;
     }
     .trickortreat {
-        width: 70%;
-        height: 46vh;
+        width: 320px;
+        height: 320px;
     }
     .game {
-        width: 70%;
-        height: 46vh;
+        width: 320px;
+        height: 320px;
     }
     .text h1 {
         font-size: 2.3rem;
@@ -708,20 +709,20 @@ main {
         padding-bottom: 4rem;
     }
     .home {
-        width: 70%;
-        height: 90vh;
+        width: 380px;
+        height: 380px;
     }
     .make_up {
-        width: 70%;
-        height: 90vh;
+        width: 380px;
+        height: 380px;
     }
     .trickortreat {
-        width: 70%;
-        height: 90vh;
+        width: 380px;
+        height: 380px;
     }
     .game {
-        width: 70%;
-        height: 90vh;
+        width: 380px;
+        height: 380px;
     }
     .text h1 {
         font-size: 3.5rem;
