--- a/index.css
+++ b/index.css
@@ -159,7 +159,6 @@ main {
     background-repeat: no-repeat;
     width: 400px;
     height: 400px;
-    border: 1px solid yellow;
 }
 
 .make_up {
@@ -324,7 +323,8 @@ main {
         height: 230px;
     }
     .game {
-        width: 230px height: 230px;
+        width: 230px;
+        height: 230px;
     }
     .text h1 {
         font-size: 1.5rem;
