--- a/index.css
+++ b/index.css
@@ -353,9 +353,6 @@ main {
     .contact_me {
         display: none;
     }
-    .love_text a {
-        text-decoration: underline #000;
-    }
 }
 
 @media (min-width:326px) and (max-width:375px) {
@@ -461,9 +458,6 @@ main {
     .contact_me {
         display: none;
     }
-    .love_text a {
-        text-decoration: underline #000;
-    }
 }
 
 @media (min-width:376px) and (max-width:425px) {
@@ -565,9 +559,6 @@ main {
     }
     .contact_me {
         display: none;
-    }
-    .love_text a {
-        text-decoration: underline #000;
     }
 }
 
@@ -671,9 +662,6 @@ main {
     .contact_me {
         display: none;
     }
-    .love_text a {
-        text-decoration: underline #000;
-    }
 }
 
 @media (min-width:501px) and (max-width:768px) {
@@ -743,15 +731,18 @@ main {
     }
     .love_text {
         left: 1%;
-        margin-top: -9%;
+        margin-top: -8%;
     }
     .love_text p {
-        font-size: 2rem;
+        font-size: 1.7rem;
     }
     .contact_me {
         display: none;
     }
-    .love_text a {
-        text-decoration: underline #000;
+}
+
+@media (min-width:769px) and (max-width:900px) {
+    .contact_me {
+        display: none;
     }
 }
