--- a/index.css
+++ b/index.css
@@ -310,7 +310,7 @@ main {
         display: block;
         margin-bottom: 3rem;
     }
-    .home {
+    .home video {
         width: 230px;
         height: 230px;
     }
@@ -415,7 +415,7 @@ main {
         display: block;
         margin-bottom: 4rem;
     }
-    .home {
+    .home video {
         width: 250px;
         height: 250px;
     }
@@ -517,7 +517,7 @@ main {
         display: block;
         margin-bottom: 4rem;
     }
-    .home {
+    .home video {
         width: 300px;
         height: 300px;
     }
@@ -619,7 +619,7 @@ main {
         display: block;
         margin-bottom: 4rem;
     }
-    .home {
+    .home video {
         width: 320px;
         height: 320px;
     }
