--- a/index.css
+++ b/index.css
@@ -209,7 +209,7 @@ main {
 }
 
 .ouija {
-    background: url(ouija_c.png);
+    background: url(ouija_c.webp);
     background-repeat: no-repeat;
     background-size: contain;
     width: 70px;
